; ModuleID = '/home/carl/AnghaBench/nginx/src/core/extr_ngx_slab.c_ngx_slab_alloc.c'
source_filename = "/home/carl/AnghaBench/nginx/src/core/extr_ngx_slab.c_ngx_slab_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ngx_slab_alloc(%struct.TYPE_4__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = call i32 @ngx_shmtx_lock(i32* %7)
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = load i64, i64* %4, align 8
  %11 = call i8* @ngx_slab_alloc_locked(%struct.TYPE_4__* %9, i64 %10)
  store i8* %11, i8** %5, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = call i32 @ngx_shmtx_unlock(i32* %13)
  %15 = load i8*, i8** %5, align 8
  ret i8* %15
}

declare dso_local i32 @ngx_shmtx_lock(i32*) #1

declare dso_local i8* @ngx_slab_alloc_locked(%struct.TYPE_4__*, i64) #1

declare dso_local i32 @ngx_shmtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
